force-app/main/default/objects/B2T_Contact_Upload_Audit__c/B2T_Contact_Upload_Audit__c.object-meta.xml
<CustomObject>
    <label>B2T Contact Upload Audit</label>
    <nameField>
        <displayFormat>AUDIT-{00000}</displayFormat>
        <label>B2T Contact Upload Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2T Contact Upload Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>