force-app/main/default/objects/B2T_Contact_Upload_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2T Contact Upload Audits</relationshipLabel>
    <relationshipName>B2T_Contact_Upload_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>