force-app/main/default/objects/B2T_Contact_Upload_Audit__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Account Created</fullName>
            </value>
            <value>
                <fullName>Existing Account Found</fullName>
            </value>
            <value>
                <fullName>Multiple Existing Accounts</fullName>
            </value>
            <value>
                <fullName>Lead Created</fullName>
            </value>
            <value>
                <fullName>Upload Error</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>