force-app/main/default/objects/B2T_Contact_Upload_Audit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2T Contact Upload Audits</relationshipLabel>
    <relationshipName>B2T_Contact_Upload_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>