force-app/main/default/objects/B2T_Contact_Upload_Audit__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Contact Created</fullName>
            </value>
            <value>
                <fullName>Existing Contact Found</fullName>
            </value>
            <value>
                <fullName>Multiple Existing Contacts</fullName>
            </value>
            <value>
                <fullName>Upload Error</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>