force-app/main/default/objects/B2T_Contact_Upload_Audit__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <externalId>true</externalId>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>