force-app/main/default/objects/B2T_Contact_Upload_Audit__c/listViews/All_Uploads.listView-meta.xml
<ListView>
    <fullName>All_Uploads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Upload_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Uploads</label>
</ListView>